# DNetLib

./: .gitignore  CMakeLists.txt  CMakeSettings.json  compile_commands.json
DNetLib/: CMakeLists.txt
DNetLib/include/: DNetResult.h  DSockOptions.h  EndPoint.h  IPVer.h  Net.h  PackageType.h  Socket.h  consts.h  helper.h  includeMe.h  pch.h
DNetLib/src/: EndPoint.cpp  Net.cpp  Socket.cpp
cTest/: CMakeLists.txt  test.cpp
